--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DB_STRING = mongodb+srv://layloe:Sx3W5bNRVhmiuNFk@cluster0.bwkb5x0.mongodb.net/?retryWrites=true&w=majority
-PORT = 8000
+Nice try! =)
